tests/build/fail/widget_new/incorrect_arg_type1.stderr
error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
 --> $DIR/incorrect_arg_type1.rs:6:18
  |
6 |         margin = true
  |                  ^^^^ the trait `IntoVar<SideOffsets>` is not implemented for `bool`
  |
  = help: the following implementations were found:
            <bool as IntoVar<AutoSize>>
            <bool as IntoVar<CaptureMode>>
            <bool as IntoVar<FactorNormal>>
            <bool as IntoVar<FontFeatureState>>
          and 2 others
  = note: required by `margin_ArgsImpl::<T_margin>::new`
